--- a/web/css/custom/formularios.css
+++ b/web/css/custom/formularios.css
@@ -89,6 +89,10 @@ select[multiple]{
     overflow: hidden;
 }
 
+textarea{
+    resize: none;
+}
+
 .input-group-addon {
     color: #555;
     background-color: #fff;
