--- a/web/css/custom/tablas.css
+++ b/web/css/custom/tablas.css
@@ -20,3 +20,8 @@ th {
 tbody > tr > td{
     font-weight: normal;
 }
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+  background-color: #EC008A !important;
+  border-color: #EC008A;
+}
